--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,10 @@
 /mvnw text eol=lf
 *.cmd text eol=crlf
+
+*.html linguist-language=HTML
+*.css linguist-language=CSS
+*.js linguist-language=JavaScript
+*.java linguist-language=Java
+*.xml linguist-language=XML
+*.js linguist-language=bootstrap
+
